--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
         buildConfigField "String", "BASEURL", "\"https://en.wikipedia.org\""
 
         buildConfigField "String", "WIKIPEDIAURL", "\"https://en.wikipedia.org/?curid=\""
+        buildConfigField "int", "DEFAULT_GPS_RANGE", "10000"//in meters
+        buildConfigField "int", "MIN_TIME_BETWEEN_API_REQS", "30000"//in ms
     }
     buildTypes {
         release {
@@ -34,10 +36,24 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    // Instrumentation test dependencies
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    // Unit tests dependencies
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    final POWER_MOCKITO_VERSION = '1.6.5'
+    testCompile "org.powermock:powermock-api-mockito:$POWER_MOCKITO_VERSION"
+    testCompile "org.powermock:powermock-module-junit4-rule-agent:$POWER_MOCKITO_VERSION"
+    testCompile "org.powermock:powermock-module-junit4-rule:$POWER_MOCKITO_VERSION"
+    testCompile "org.powermock:powermock-module-junit4:$POWER_MOCKITO_VERSION"
+
+
 
     // Android
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -57,7 +73,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
 
     //RxJava
-    compile 'io.reactivex:rxjava:1.1.2'
+    compile 'io.reactivex:rxjava:1.3.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
 
@@ -71,5 +87,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     // GPS
-    //compile 'com.patloew.rxlocation:rxlocation:1.0.3'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
+    compile 'pl.charmas.android:android-reactive-location:0.10@aar'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
 }
